<resources>
    <string name="app_name">CAP Event Planner</string>

    <string name="title_section1">Upcoming Events</string>
    <string name="title_section2">Approve Events</string>
    <string name="title_section3">Create Events</string>
    <string name="title_section4">Account</string>


    <string name="event_name_hint">Event name goes here...</string>
    <string name="event_date_hint">Use mm/dd/yyyy format...</string>
    <string name="event_location_hint">Address or location of the event...</string>
    <string name="event_description_hint">Additional details for event
        go here...</string>
    <string name="event_price_hint">Enter the price before subsidy</string>

    <string name="save_settings_button">Save</string>
    <string name="cancel_settings_button">Cancel</string>

    <string name="save_event_button">Save</string>
    <string name="cancel_event_button">Delete</string>
    <string name="submit_event_button">Submit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="login_google_button">Login</string>
    <string name="logout_google_button">Logout</string>
    <string name="action_logout">Logout</string>

    <string name="event_subsidy_hint">Enter the subsidy amount</string>
    <string name="approve_event_button">Approve</string>
    <string name="deny_event_button">Deny</string>

    <string name="rsvp_event_button">RSVP</string>
    <string name="email_event_button">Email Attendees</string>
    <string name="delete_event_button">Delete Event</string>

    <string name="single_event_date_title">Date: </string>
    <string name="single_event_price_title">Price: </string>
    <string name="single_event_description_title">Description: </string>
    <string name="single_event_location_title">Location: </string>
</resources>
